force-app/main/default/objects/Community_Profile__c/Community_Profile__c.object-meta.xml
<CustomObject>
    <description>This object describes the &quot;role&quot; or persona of the Contact when logged into the Community.  It allows the org to store varying data for different roles or types.</description>
    <label>Community Profile</label>
    <nameField>
        <displayFormat>CP-{00000}</displayFormat>
        <label>Community Profile Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Community Profiles</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>