force-app/main/default/objects/Community_Profile__c/fields/Advisor__c.field-meta.xml
<CustomField>
    <fullName>Advisor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Allows a Community Profile to have a designated Advisor user.  We recommend this field should be Read Only and only populated by a System Admin.</description>
    <label>Advisor</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Community_Profiles</relationshipName>
    <type>Lookup</type>
</CustomField>