force-app/main/default/objects/Community_Profile__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The Contact that is associated with this Community Profile record.  A Contact may have multiple Community Profiles (one for each role)</description>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Community Profiles</relationshipLabel>
    <relationshipName>Community_Profiles</relationshipName>
    <type>Lookup</type>
</CustomField>