force-app/main/default/objects/Community_Profile__c/fields/Email__c.field-meta.xml
<CustomField>
    <fullName>Email__c</fullName>
    <description>Email address for profile</description>
    <label>Email</label>
    <type>Email</type>
</CustomField>