force-app/main/default/objects/Community_Profile__c/fields/Primary__c.field-meta.xml
<CustomField>
    <fullName>Primary__c</fullName>
    <defaultValue>false</defaultValue>
    <description>indicates primary profile for user</description>
    <label>Primary</label>
    <type>Checkbox</type>
</CustomField>