force-app/main/default/objects/Community_Profile__c/recordTypes/Alumni.recordType-meta.xml
<RecordType>
    <fullName>Alumni</fullName>
    <active>true</active>
    <description>To be used to capture fields for an Alumni Community Profile</description>
    <label>Alumni</label>
</RecordType>