force-app/main/default/objects/Community_Profile__c/recordTypes/FacultyStaff.recordType-meta.xml
<RecordType>
    <fullName>FacultyStaff</fullName>
    <active>true</active>
    <description>To be used to capture fields for a Faculty/Staff Community Profile</description>
    <label>Faculty/Staff</label>
</RecordType>