force-app/main/default/objects/Community_Profile__c/recordTypes/Student.recordType-meta.xml
<RecordType>
    <fullName>Student</fullName>
    <active>true</active>
    <description>To be used to capture fields for a Student Community Profile</description>
    <label>Student</label>
</RecordType>